--- a/cpp/velox/CMakeLists.txt
+++ b/cpp/velox/CMakeLists.txt
@@ -329,9 +329,9 @@ set(VELOX_SRCS
     utils/Common.cc
     )
 
-if (ENABLE_HDFS)
-  list(APPEND VELOX_SRCS utils/HdfsUtils.cc)
-endif ()
+# if (ENABLE_HDFS)
+#   list(APPEND VELOX_SRCS utils/HdfsUtils.cc)
+# endif ()
 
 if(ENABLE_S3)
   find_package(ZLIB)
