--- a/pom.xml
+++ b/pom.xml
@@ -336,10 +336,10 @@
       <properties>
         <sparkbundle.version>3.5</sparkbundle.version>
         <sparkshim.artifactId>spark-sql-columnar-shims-spark35</sparkshim.artifactId>
-        <spark.version>3.5.2</spark.version>
-        <iceberg.version>1.5.0</iceberg.version>
+        <spark.version>3.5.0-ebay.0-SNAPSHOT</spark.version>
+        <iceberg.version>1.5.0.0.0.1</iceberg.version>
         <delta.package.name>delta-spark</delta.package.name>
-        <delta.version>3.2.0</delta.version>
+        <delta.version>3.0.0-ebay.0-SNAPSHOT</delta.version>
 	    <delta.binary.version>32</delta.binary.version>
 	    <hudi.version>0.15.0</hudi.version>
         <fasterxml.version>2.15.1</fasterxml.version>
