--- a/.github/workflows/build_ebay_gluten.yml
+++ b/.github/workflows/build_ebay_gluten.yml
@@ -1,6 +1,23 @@
-name: Build ebay bundle package2
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+name: Build eBay bundle package
 
 env:
+  ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
+  CCACHE_DIR: "${{ github.workspace }}/.ccache"
   M2_REPOSITORY: '/root/.m2/repository/'
 
 on:
@@ -11,7 +28,46 @@ on:
 jobs:
   build-native-lib:
     runs-on: ubuntu-20.04
-    container: apache/gluten:vcpkg-centos-7
+    steps:
+      - uses: actions/checkout@v4
+      - name: Get Ccache
+        uses: actions/cache/restore@v3
+        with:
+          path: '${{ env.CCACHE_DIR }}'
+          key: ccache-centos7-release-default-${{github.sha}}
+          restore-keys: |
+            ccache-centos7-release-default
+      - name: Build Gluten velox third party
+        run: |
+          docker run -v $GITHUB_WORKSPACE:/work -w /work apache/gluten:vcpkg-centos-7 bash -c "
+            df -a
+            cd /work
+            export CCACHE_DIR=/work/.ccache
+            bash dev/ci-velox-buildstatic-centos-7.sh
+            ccache -s
+            mkdir -p /work/.m2/repository/org/apache/arrow/
+            cp -r $M2_REPOSITORY/org/apache/arrow/* /work/.m2/repository/org/apache/arrow/
+            cp -r $M2_REPOSITORY/org/apache/arrow  arrow-package
+          "
+      - name: Upload native libs
+        uses: actions/upload-artifact@v4
+        with:
+          path: ./cpp/build/releases/
+          name: velox-native-lib-${{github.sha}}
+          retention-days: 1
+          if-no-files-found: error
+      - name: Upload Artifact Arrow Jar
+        uses: actions/upload-artifact@v4
+        with:
+          path: ./arrow-package
+          name: velox-arrow-jar-centos-7-${{github.sha}}
+          retention-days: 1
+          if-no-files-found: error
+
+  build-bundle-package-centos8:
+    needs: build-native-lib
+    runs-on: ubuntu-20.04
+    container: centos:8
     steps:
       - uses: actions/checkout@v1
         with:
@@ -24,6 +80,25 @@ jobs:
           rm -rf $M2_REPOSITORY/io && rm -rf $M2_REPOSITORY/org
           mv ../packages/* $M2_REPOSITORY
           cd $M2_REPOSITORY && find . -name "_*.repositories" | xargs rm -rf # Fix Could not find artifact io.ebay.rheos ...
+      - uses: actions/checkout@v2
+      - name: Download All Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: velox-native-lib-${{github.sha}}
+          path: ./cpp/build/releases
+      - name: Download All Arrow Jar Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: velox-arrow-jar-centos-7-${{github.sha}}
+          path: $M2_REPOSITORY/org/apache/arrow/
+      - name: Setup java and maven
+        run: |
+          sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-* && \
+          sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-* && \
+          yum update -y && yum install -y java-1.8.0-openjdk-devel wget && \
+          wget https://downloads.apache.org/maven/maven-3/3.8.8/binaries/apache-maven-3.8.8-bin.tar.gz && \
+          tar -xvf apache-maven-3.8.8-bin.tar.gz && \
+          mv apache-maven-3.8.8 /usr/lib/maven
       - uses: actions/checkout@v1
         with:
           repository: wangyum/ebay-spark
@@ -31,19 +106,18 @@ jobs:
           token: ${{ secrets.EBAY_TOKEN }}
       - name: Install ebay-spark to $M2_REPOSITORY
         run: |
-          cd ../ebay-spark && build/mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true -Dmaven.scaladoc.skip=true -Dmaven.source.skip -Dcyclonedx.skip=true
-      - name: Build Gluten velox third party
+          cd ../ebay-spark && build/mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true
+      - name: Build for ebay Spark 3.5
         run: |
-          git clone -b ebay-build2 https://github.com/wangyum/incubator-gluten.git
-          cd incubator-gluten
-          bash dev/ci-velox-buildstatic-centos-7.sh
-          ls -lh ./cpp/build/releases/
-          mvn clean install -Pspark-3.5 -Dhadoop.version=3.3.3 -Pbackends-velox -Pceleborn -Puniffle -DskipTests -Dmaven.source.skip
+          cd $GITHUB_WORKSPACE/ && \
+          export MAVEN_HOME=/usr/lib/maven && \
+          export PATH=${PATH}:${MAVEN_HOME}/bin && \
+          mvn clean install -Pspark-3.5 -Dhadoop.version=3.3.3.1.0.39 -Pbackends-velox -Pceleborn -Puniffle -DskipTests=true -Dmaven.javadoc.skip=true -Dmaven.scaladoc.skip=true -Dmaven.source.skip -Dcyclonedx.skip=true
           ls -lh package/target/
       - name: Upload bundle package
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: gluten-velox-bundle-package
           path: package/target/gluten-velox-bundle-*.jar
-          retention-days: 7
+          retention-days: 3
           if-no-files-found: error
