--- a/pom.xml
+++ b/pom.xml
@@ -336,14 +336,14 @@
       <properties>
         <sparkbundle.version>3.5</sparkbundle.version>
         <sparkshim.artifactId>spark-sql-columnar-shims-spark35</sparkshim.artifactId>
-        <spark.version>3.5.2</spark.version>
-        <iceberg.version>1.5.0</iceberg.version>
+        <spark.version>3.5.0-ebay.0-SNAPSHOT</spark.version>
+        <iceberg.version>1.5.0.0.0.1</iceberg.version>
         <delta.package.name>delta-spark</delta.package.name>
-        <delta.version>3.2.0</delta.version>
-        <delta.binary.version>32</delta.binary.version>
-        <hudi.version>0.15.0</hudi.version>
+        <delta.version>3.0.0-ebay.0-SNAPSHOT</delta.version>
+	    <delta.binary.version>32</delta.binary.version>
+	    <hudi.version>0.15.0</hudi.version>
         <fasterxml.version>2.15.1</fasterxml.version>
-        <hadoop.version>3.3.4</hadoop.version>
+        <hadoop.version>3.3.3.1.0.39</hadoop.version>
         <antlr4.version>4.9.3</antlr4.version>
       </properties>
       <dependencies>
