--- a/.github/workflows/build_ebay_gluten.yml
+++ b/.github/workflows/build_ebay_gluten.yml
@@ -27,6 +27,8 @@ on:
 jobs:
   build-native-lib:
     runs-on: ubuntu-20.04
+    env:
+      OAUTH_KEY: ${{ secrets.OAUTH_KEY }}
     steps:
       - uses: actions/checkout@v4
       - name: Build Gluten velox third party
@@ -56,6 +58,8 @@ jobs:
   build-bundle-package-centos8:
     needs: build-native-lib
     runs-on: ubuntu-20.04
+    env:
+      OAUTH_KEY: ${{ secrets.OAUTH_KEY }}
     container: centos:8
     steps:
       - uses: actions/checkout@v1
@@ -95,18 +99,36 @@ jobs:
           token: ${{ secrets.EBAY_TOKEN }}
       - name: Install ebay-spark to $M2_REPOSITORY
         run: |
-          cd ../ebay-spark && build/mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true
+          cd ../ebay-spark && build/mvn clean install -Dhadoop.version=3.3.3.1.0.39 -DskipTests=true -Dmaven.javadoc.skip=true
       - name: Build for ebay Spark 3.5
         run: |
           cd $GITHUB_WORKSPACE/ && \
           export MAVEN_HOME=/usr/lib/maven && \
           export PATH=${PATH}:${MAVEN_HOME}/bin && \
-          mvn clean install -Pspark-3.5 -Dhadoop.version=3.3.3.1.0.39 -Pbackends-velox -Pceleborn -Puniffle -DskipTests=true -Dmaven.javadoc.skip=true -Dmaven.scaladoc.skip=true -Dmaven.source.skip -Dcyclonedx.skip=true
+          mvn clean install -Pspark-3.5 -Dhadoop.version=3.3.3.1.0.39 -Pbackends-velox -Pceleborn -DskipTests=true -Dmaven.javadoc.skip=true -Dmaven.scaladoc.skip=true -Dmaven.source.skip -Dcyclonedx.skip=true
           ls -lh package/target/
       - name: Upload bundle package
         uses: actions/upload-artifact@v4
         with:
           name: gluten-velox-bundle-package
+          path: package/target/gluten-velox-bundle-*.jar
+          retention-days: 3
+          if-no-files-found: error
+      - name: Install ebay-spark to $M2_REPOSITORY with scala 2.13
+        run: |
+          cd ../ebay-spark && ./dev/change-scala-version.sh 2.13 && build/mvn clean install -Pscala-2.13 -Dhadoop.version=3.3.3.1.0.39 -DskipTests=true -Dmaven.javadoc.skip=true
+      - name: Build for ebay Spark 3.5 with scala 2.13
+        run: |
+          cd $GITHUB_WORKSPACE/ && \
+          export MAVEN_HOME=/usr/lib/maven && \
+          export PATH=${PATH}:${MAVEN_HOME}/bin && \
+          export SPARK_SCALA_VERSION=2.13 && \
+          mvn clean install -Pspark-3.5 -Pscala-2.13 -Dhadoop.version=3.3.3.1.0.39 -Pbackends-velox -Pceleborn -DskipTests=true -Dmaven.javadoc.skip=true -Dmaven.scaladoc.skip=true -Dmaven.source.skip -Dcyclonedx.skip=true
+          ls -lh package/target/
+      - name: Upload bundle package with scala 2.13
+        uses: actions/upload-artifact@v4
+        with:
+          name: gluten-velox-bundle-package-scala2.13
           path: package/target/gluten-velox-bundle-*.jar
           retention-days: 3
           if-no-files-found: error
