--- a/pom.xml
+++ b/pom.xml
@@ -349,7 +349,7 @@
         <sparkbundle.version>3.5</sparkbundle.version>
         <sparkshim.artifactId>spark-sql-columnar-shims-spark35</sparkshim.artifactId>
         <spark.version>3.5.0-ebay.0-SNAPSHOT</spark.version>
-        <iceberg.version>1.5.0.0.0.1</iceberg.version>
+        <iceberg.version>1.6.1.1.0.0-SNAPSHOT</iceberg.version>
         <delta.package.name>delta-spark</delta.package.name>
         <delta.version>3.0.0-ebay.0-SNAPSHOT</delta.version>
 	    <delta.binary.version>32</delta.binary.version>
