--- a/package/pom.xml
+++ b/package/pom.xml
@@ -211,6 +211,14 @@
                   </excludes>
                 </filter>
               </filters>
+              <artifactSet>
+                <includes>
+                  <include>*:*</include>
+                </includes>
+                <excludes>
+                  <exclude>javax.annotation:*</exclude>
+                </excludes>
+              </artifactSet>
             </configuration>
           </execution>
         </executions>
