--- a/pom.xml
+++ b/pom.xml
@@ -345,6 +345,9 @@
     </profile>
     <profile>
       <id>spark-3.5</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
       <properties>
         <sparkbundle.version>3.5</sparkbundle.version>
         <sparkshim.artifactId>spark-sql-columnar-shims-spark35</sparkshim.artifactId>
@@ -352,7 +355,7 @@
         <iceberg.version>1.6.1.1.0.0-SNAPSHOT</iceberg.version>
         <delta.package.name>delta-spark</delta.package.name>
         <delta.version>3.0.0-ebay.0-SNAPSHOT</delta.version>
-	    <delta.binary.version>32</delta.binary.version>
+	    <delta.binary.version>24</delta.binary.version>
 	    <hudi.version>0.15.0</hudi.version>
         <fasterxml.version>2.15.1</fasterxml.version>
         <hadoop.version>3.3.3.1.0.39</hadoop.version>
